fixed active arts not showing up

--- a/src/sass/pages/_active-arts.scss
+++ b/src/sass/pages/_active-arts.scss
@@ -1,5 +1,4 @@
 .active-arts {
-    background: lighten($pink, 10%);
     .options-wrapper {
         .yes {
             &:hover {
